--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@material-ui/icons": "^4.11.2",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "next": "^11.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "typescript": "^4.2.3"
+    "typescript": "^4.4.2"
   }
 }
