--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "lodash": "^4.17.21",
     "material-ui-icons": "^1.0.0-beta.36",
     "next": "^11.1.0",
     "react": "^17.0.2",
